Bug 290832 - Details view - selection issue
Summary: Details view - selection issue
Status: RESOLVED FIXED
Alias: None
Product: dolphin
Classification: Applications
Component: view-engine: details mode (other bugs)
Version First Reported In: 1.99
Platform: Ubuntu Linux
: NOR major
Target Milestone: ---
Assignee: Peter Penz
URL:
Keywords:
: 291028 (view as bug list)
Depends on:
Blocks:
 
Reported: 2012-01-06 22:31 UTC by Aaron Peterson
Modified: 2012-01-15 18:40 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.8.0
Sentry Crash Report:


Attachments
Just opened Dolphin (185.31 KB, image/png)
2012-01-10 06:21 UTC, Aaron Peterson
Details
Selected a file. (181.05 KB, image/png)
2012-01-10 06:22 UTC, Aaron Peterson
Details
Just trying to look in the video folder, clicked the chevron. (177.85 KB, image/png)
2012-01-10 06:23 UTC, Aaron Peterson
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Aaron Peterson 2012-01-06 22:31:07 UTC
Version:           1.99 (using Devel) 
OS:                Linux

Random files are selected when simply clicking on the expand chevron in details view.

of note I use double click setting.

Also Selections do not turn off when clicking on a single file, so I feel like all of my files are sticking to me, getting ready to be deleted.


Reproducible: Didn't try

Steps to Reproduce:
expand a folder.
click on an item below the expansion, (not trying to select it, just trying to give it focus)

click on the chevron above it


Actual Results:  
all kinds of items get selected,
from the item that had focus below (not in the expanded folder)
to all of the items in the folder, and the folder, and every file in between.

-- a massive over selection and potential for disaster --

Expected Results:  
no files get selected.
I am trying to move the focus to an item so I can use my keyboard.

clicking on the expand/contract tree chevron should make no changes to the selection or focus.

You will disagree that it causes data loss, 
but it switches data right out from under me, and I am only a keystroke away from deleting a lot of stuff if something gets miss selected.
Comment 1 Aaron Peterson 2012-01-06 22:32:32 UTC
btw, it was reproducable on my two kde 4.7.95 machines...
Comment 2 Aaron Peterson 2012-01-06 23:42:13 UTC
just upgraded to 4.8 RC2,  still occurs.
Comment 3 Peter Penz 2012-01-07 11:07:14 UTC
Thanks for the report, but the "Steps to Reproduce" are unclear to me:

> expand a folder.

ok

> click on an item below the expansion, (not
> trying to select it, just trying to
> give it focus)

How did you manage to do this? Using the keyboard selects the item. Or do you mean that an item below is a directory and you click on the expansion toggle '>'/'V'?

> click on the chevron above it

I'm not sure what you mean with "chevron" - the expansion toggle '>'/'V'?
Comment 4 Aaron Peterson 2012-01-10 06:18:21 UTC
Yes, the expansion toggle.


I clicked on a file low in the list.

I then clicked on the expansion toggle that was up high in the list.

everything was selected, including the folder with the expansion toggle, the contents of that, and everything down to the file that I had originally clicked on.
Comment 5 Aaron Peterson 2012-01-10 06:21:02 UTC
Created attachment 67635 [details]
Just opened Dolphin

I use the double click to open files option!!!
Comment 6 Aaron Peterson 2012-01-10 06:22:34 UTC
Created attachment 67636 [details]
Selected a file.

 I just happened to click.  Don't want it to be selected even,
Comment 7 Aaron Peterson 2012-01-10 06:23:35 UTC
Created attachment 67637 [details]
Just trying to look in the video folder, clicked the chevron.

Oh no!!! my files are all selected!
Comment 8 Aaron Peterson 2012-01-10 06:28:45 UTC
I did not use my keyboard, This was just in the mouse phase.

I have the double click setting on,  most people probably use the single click setting because it is default...  

(I require use of deliberate action to open a file, and will be making double click to open a file default on my livecd distro)
Comment 9 Peter Penz 2012-01-10 07:33:32 UTC
Thanks for the update, I could reproduce the issue also with single-click now.

(Internal note:
- Select a folder X (-> gets current item + selected item)
- Select an item below by pressing CTRL + left click
- Open selection toggle from folder X
Comment 10 Peter Penz 2012-01-12 06:01:08 UTC
Git commit 5094e9a9b4f2eef21216cdd846aab69c27e54063 by Peter Penz.
Committed on 11/01/2012 at 22:33.
Pushed by ppenz into branch 'KDE/4.8'.

Fix selection issue when expanding a tree

The selection anchor must be reset when changing the current item
to the root of the tree.
FIXED-IN: 4.8.0

M  +2    -0    dolphin/src/kitemviews/kitemlistcontroller.cpp
M  +1    -1    dolphin/src/kitemviews/kitemlistselectionmanager.h

http://commits.kde.org/kde-baseapps/5094e9a9b4f2eef21216cdd846aab69c27e54063
Comment 11 Peter Penz 2012-01-12 06:01:46 UTC
Git commit 2f42a397e0adb3dd015aa248392e615d234deca9 by Peter Penz.
Committed on 11/01/2012 at 22:33.
Pushed by ppenz into branch 'master'.

Fix selection issue when expanding a tree

The selection anchor must be reset when changing the current item
to the root of the tree.
FIXED-IN: 4.8.0

M  +2    -0    dolphin/src/kitemviews/kitemlistcontroller.cpp
M  +1    -1    dolphin/src/kitemviews/kitemlistselectionmanager.h

http://commits.kde.org/kde-baseapps/2f42a397e0adb3dd015aa248392e615d234deca9
Comment 12 Frank Reininghaus 2012-01-15 18:40:08 UTC
*** Bug 291028 has been marked as a duplicate of this bug. ***