Fix selection issue when expanding a tree

The selection anchor must be reset when changing the current item
to the root of the tree.

BUG: 290832
FIXED-IN: 4.8.0